--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -1,5 +1,50 @@
-.imageContainer {
+.container {
+  display: flex;
+  gap: 92px;
+}
+
+.textContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
+}
+
+.imgContainer {
+  flex: 1;
   position: relative;
-  width: 100%;
-  height: 500px;
+}
+
+.imgContainer .img {
+  object-fit: contain;
+  scale: 0.9;
+}
+
+.subtitle {
+  color: var(--button-color);
+}
+
+.title {
+  font-size: 54px;
+}
+
+.desc {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.boxes {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.boxes .box {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.boxes .box h1 {
+  color: var(--button-color);
 }
