--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -10,30 +10,30 @@
   gap: 50px;
 }
 
-.title{
-    font-size: 92px;
+.title {
+  font-size: 92px;
 }
 
-.desc{
-    font-size: 20px;
+.desc {
+  font-size: 20px;
 }
 
-.buttons{
-    display: flex;
-    gap: 20px;
+.buttons {
+  display: flex;
+  gap: 20px;
 }
 
-.button{
-    padding: 20px;
-    min-width: 120px;
-    cursor: pointer;
-    border: none;
-    border-radius: 4px;
+.button {
+  padding: 20px;
+  min-width: 120px;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
 }
 
-.button:first-child{
-    background-color: var(--button-color);
-    color: var(--text-color);
+.button:first-child {
+  background-color: var(--button-color);
+  color: var(--text-color);
 }
 
 .brands {
@@ -46,4 +46,25 @@
 .imageContainer {
   flex: 1;
   position: relative;
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .buttons {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .title {
+    font-size: 64px;
+  }
+
+  .brands {
+    width: 100%;
+  }
 }
